K8S/minio/base/deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "testing"
  name: "minio"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "minio"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "minio"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9000"
        prometheus.io/path: "/minio/v2/metrics/cluster"
    spec:
      volumes:
        - name: "minio-data"
          persistentVolumeClaim:
            claimName: "minio-data"
      containers:
        - name: "minio"
          image: "minio/minio:latest"
          imagePullPolicy: "IfNotPresent"
          args:
            - "server"
            - "/data"
            - "--console-address"
            - ":9001"
          volumeMounts:
            - name: "minio-data"
              mountPath: "/data"
          ports:
            - containerPort: 9000
              protocol: "TCP"
              name: "http"
            - containerPort: 9001
              protocol: "TCP"
              name: "console"
          resources:
            requests:
              cpu: "50m"
              memory: "150Mi"
            limits:
              cpu: "100m"
              memory: "200Mi"
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
            httpGet:
              path: "/minio/health/live"
              port: 9000
