K8S/minio/base/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "testing"
  name: "minio"
spec:
  selector:
    app.kubernetes.io/name: "minio"
  ports:
    - name: "http"
      port: 9000
      protocol: "TCP"
      targetPort: 9000
    - name: "console"
      port: 9001
      protocol: "TCP"
      targetPort: 9001
