K8S/minio/base/policy.yml
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "minio-external-access"
spec:
  policyTypes: ["Ingress"]
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "minio"
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "ingress-nginx"
          podSelector:
            matchLabels:
              app.kubernetes.io/name: "ingress-nginx"
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: "prometheus"
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              required.storage: "minio"
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              required.storage: "s3"
